# spodcat-frontend

./: .editorconfig  .ember-cli  .env  .env.development  .env.production  .eslintignore  .eslintrc.js  .gitignore  .oxlintrc.json  .prettierignore  .prettierrc.js  .stylelintignore  .stylelintrc.js  .template-lintrc.js  README.md  colada.options.ts  ecosystem.config.cjs  ember-cli-build.js  eslint.config.mjs  eslint.config.ts  fastboot-server.js  get_material_symbols.py  index.html  intl.py  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  poetry.toml  pyproject.toml  tsconfig.app.json  tsconfig.json  tsconfig.node.json  typed-router.d.ts  vite.config.ts  vitest.config.ts
app/: app.ts  app.vue  font-awesome.ts  formats.js  index.html  preserve-scroll-route.ts  responsive.ts  router.ts  symbols.ts  utils.ts
app/adapters/: application.ts  episode.ts
app/components/: Attribution.vue  Audio.vue  Button.vue  CloseIcon.vue  Comments.vue  ContentCard.vue  ContentDescription.vue  ContentShareIcon.vue  DbfsBar.vue  Loading.vue  MaybeLink.vue  PlaybackRateControl.vue  Popup.vue  PostCard.vue  ProgressCircle.vue  ResponsiveSize.vue  (+37 more)
config/: deploy.js  dotenv.js  ember-cli-update.json  ember-intl.js  environment.js  fastboot.js  targets.js
deployment/: fastboot-server.js  spodcat-frontend.service
i18n/: intl.py
public/: airhorn.opus  robots.txt  yeah.opus
scripts/: deploy
src/: App.vue  api.ts  main.ts  symbols.ts  utils.ts  vite-env.d.ts
tests/: index.html  test-helper.ts
translations/: en.yaml  sv.yaml
types/: global.d.ts
(+267 files in other folders)
