[tool.poetry]
name = "podcast-frontend"
version = "0.1.0"
description = ""
authors = ["Robert Huselius <robert@huseli.us>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
types-requests = "^2.32.0.20241016"
isort = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
